test/files/neg/t5606.check
t5606.scala:5: error: using `?` as a type name requires backticks.
case class CaseTest_?[?](someData: String)
                      ^
t5606.scala:23: error: using `?` as a type name requires backticks.
  def regress_?[F[?]]   = 2
                  ^
t5606.scala:3: error: Top-level wildcard is not allowed
case class CaseTest[_](someData: String)
                    ^
t5606.scala:8: error: Top-level wildcard is not allowed
case class CaseTest2[_, _](someData: String)
                     ^
t5606.scala:8: error: Top-level wildcard is not allowed
case class CaseTest2[_, _](someData: String)
                        ^
t5606.scala:11: error: Top-level wildcard is not allowed
  def f[_](x: Int) = ???
        ^
6 errors
